// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateClientEntryPoints should avoid creating the client file at all if packages have no entry points 1`] = `Array []`;

exports[`generateClientEntryPoints should write multiple client entry points 1`] = `
Array [
  Array [
    "/build/bundling/entry-points/site-html",
  ],
  Array [
    "/build/bundling/entry-points/site-amp",
  ],
  Array [
    "/build/bundling/entry-points/site-2",
  ],
]
`;

exports[`generateClientEntryPoints should write multiple client entry points 2`] = `
Object {
  "in": Array [
    Object {
      "mode": "html",
      "name": "site-html",
      "packages": Array [
        "package1",
        "package2",
        "package2",
      ],
    },
    Object {
      "mode": "amp",
      "name": "site-amp",
      "packages": Array [
        "package1",
        "package3",
      ],
    },
    Object {
      "mode": "html",
      "name": "site-2",
      "packages": Array [
        "package1",
      ],
    },
  ],
  "out": Array [
    Array [
      "/build/bundling/entry-points/site-html/client.ts",
      "import * as package1_html from \\"package1/src/html/client\\";
import * as package2_html from \\"package2/src/html/client\\";

export {
  package1_html,
  package2_html,
};",
      "utf8",
    ],
    Array [
      "/build/bundling/entry-points/site-amp/client.ts",
      "import * as package1_amp from \\"package1/src/amp/client\\";
import * as package3_amp from \\"package3/src/amp/client\\";

export {
  package1_amp,
  package3_amp,
};",
      "utf8",
    ],
    Array [
      "/build/bundling/entry-points/site-2/client.ts",
      "import * as package1_html from \\"package1/src/html/client\\";

export {
  package1_html,
};",
      "utf8",
    ],
  ],
}
`;

exports[`generateClientEntryPoints should write multiple client entry points 3`] = `
Array [
  Object {
    "name": "site-html",
    "path": "/build/bundling/entry-points/site-html/client.ts",
  },
  Object {
    "name": "site-amp",
    "path": "/build/bundling/entry-points/site-amp/client.ts",
  },
  Object {
    "name": "site-2",
    "path": "/build/bundling/entry-points/site-2/client.ts",
  },
]
`;

exports[`generateClientEntryPoints should write one client entry point 1`] = `
Array [
  "/build/bundling/entry-points/site-1",
]
`;

exports[`generateClientEntryPoints should write one client entry point 2`] = `
Object {
  "in": Array [
    Object {
      "mode": "html",
      "name": "site-1",
      "packages": Array [
        "package1",
        "package2",
      ],
    },
  ],
  "out": Array [
    "/build/bundling/entry-points/site-1/client.ts",
    "import * as package1_html from \\"package1/src/html/client\\";
import * as package2_html from \\"package2/src/html/client\\";

export {
  package1_html,
  package2_html,
};",
    "utf8",
  ],
}
`;

exports[`generateClientEntryPoints should write one client entry point 3`] = `
Array [
  Object {
    "name": "site-1",
    "path": "/build/bundling/entry-points/site-1/client.ts",
  },
]
`;

exports[`generateServerEntryPoint should write one server entry point for multiple sites 1`] = `
Object {
  "in": Array [
    Object {
      "mode": "html",
      "name": "site-html",
      "packages": Array [
        "package1",
        "package2",
        "package2",
      ],
    },
    Object {
      "mode": "amp",
      "name": "site-amp",
      "packages": Array [
        "package1",
        "package3",
      ],
    },
    Object {
      "mode": "html",
      "name": "site-2",
      "packages": Array [
        "package1",
      ],
    },
  ],
  "out": Array [
    Array [
      "/build/bundling/entry-points/server.ts",
      "import * as package1_html from \\"package1/src/html/server\\";
import * as package2_html from \\"package2/src/html/server\\";
import * as package1_amp from \\"package1/src/amp/server\\";
import * as package3_amp from \\"package3/src/amp/server\\";

export {
  package1_html,
  package2_html,
  package1_amp,
  package3_amp,
};",
      "utf8",
    ],
  ],
}
`;

exports[`generateServerEntryPoint should write one server entry point for multiple sites 2`] = `
Object {
  "name": "server",
  "path": "/build/bundling/entry-points/server.ts",
}
`;

exports[`generateServerEntryPoint should write one server entry point for one site 1`] = `
Object {
  "in": Array [
    Object {
      "mode": "html",
      "name": "site-1",
      "packages": Array [
        "package1",
        "package2",
      ],
    },
  ],
  "out": Array [
    "/build/bundling/entry-points/server.ts",
    "import * as package1_html from \\"package1/src/html/server\\";
import * as package2_html from \\"package2/src/html/server\\";

export {
  package1_html,
  package2_html,
};",
    "utf8",
  ],
}
`;

exports[`generateServerEntryPoint should write one server entry point for one site 2`] = `
Object {
  "name": "server",
  "path": "/build/bundling/entry-points/server.ts",
}
`;
